<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TournMaster</string>
    <string name="login">Login!</string>
    <string name="username">username</string>
    <string name="iniciar_sessi">Iniciat Sessió</string>
    <string name="Error_Login">Error amb l usuari o contrasenya</string>
    <string name="Tittle">Has Iniciat sessio!</string>
    <string name="Error_Conex">Hagut un error de conexió</string>
    <string name="selecciona_tu_fecha_de_nacimiento">Selecciona tu fecha de nacimiento:</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre_de_usuario">Nombre de usuario:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="escribe_aqu_tu_usuario">Escribe aquí tu usuario</string>
    <string name="repite_aqu_tu_contrase_a">Repite aquí tu contraseña</string>
    <string name="repite_la_contrase_a">Repite la contraseña:</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="escribe_aqu_tu_contrase_a">Escribe aquí tu contraseña</string>
    <string name="hombre">Hombre</string>
    <string name="selecciona_tu_sexo">Selecciona tu sexo:</string>
    <string name="rol">tu rol:</string>
    <string name="tusexo">tu sexo:</string>
    <string name="mujer">Mujer</string>
    <string name="jugador">Jugador</string>
    <string name="selecciona_tu_rol">Selecciona tu rol:</string>
    <string name="tu_rol">tu rol:</string>
    <string name="volver">Volver</string>
    <string name="telefono">Telefono</string>
    <string name="error_conex">Error al registrar</string>
    <string name="contra">La contraseña no coincide</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="tourmasterlogo">TourMasterLOGO</string>
    <string name="inicia_sesi_n">¡Inicia sesión!</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido">¡BIENVENIDO!</string>
    <string name="gas_al_p_del">¡Gas al pádel!</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="fotousuario">fotousuario</string>
    <string name="tu_correo_electr_nico">Tu Correo electrónico:</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="escribe_aqu_tu_correo">Escribe aquí tu correo</string>
    <string name="organizador">Organizador</string>
    <string name="tick">tick</string>
    <string name="miss_error_null">Omple tots els camps del formulari</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="posici_n_en_la_pista">Posición en la pista</string>
    <string name="tu_pareja_favorita">Tu pareja favorita</string>
    <string name="tiempo_jugado">Tiempo jugado</string>
    <string name="tiempo_jugado2">Tiempo jugado:</string>
    <string name="golpeo_preferido">Golpeo preferido:</string>
    <string name="tu_club">Tu club</string>
    <string name="licencia">Licencia</string>
    <string name="Actualizar_perfil">Actualizar_perfil</string>
    <string name="cancelar_edicion">Cancelar Edición</string>
    <string name="tus_datos">Tus Datos</string>
    <string name="tu_surname">Apellido del usuario</string>
    <string name="pos_derecha">Derecha</string>
    <string name="pos_izquierda">Izquierda</string>
    <string name="Posicion">Tu Posición</string>
    <string name="Nombre_real">Tu Nombre</string>
    <string name="Selecciona_Imagen">Selecciona una imagen</string>
    <string name="Abrir">Abrir Galeria</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Selecionar_filtros">Seleccionar filtros</string>
    <string name="buscar_sexo">Buscar por género</string>
    <string name="buscar_posicion">Buscar por posición </string>
    <string name="buscar_golpe">Buscar por golpe favorito </string>
    <string name="Inicio">Inicio</string>
    <string name="Partidos">Partidos</string>
    <string name="Buscar">Buscar</string>
    <string name="email">Email:</string>
    <string name="compa_ero_favorito">Compañero favorito:</string>
    <string name="posici_n">Posición:</string>
    <string name="su_club">Club:</string>
    <string name="g_nero">Género:</string>
    <string name="nombre">Nombre:</string>
    <string name="su_rol">Rol:</string>
    <string name="Perfil">Perfil</string>
    <string name="smash">Smash</string>
    <string name="reves">Reves</string>
    <string name="volea">Volea</string>
    <string name="globo">Globo</string>
    <string name="cortada">Cortada</string>
    <string name="saque">Saque</string>
    <string name="right">Right</string>
    <string name="female_sex">female_Sex</string>
    <string name="Torneig">Torneig</string>
    <string name="nombre_del_club">Nombre del club</string>
    <string name="guion">-</string>
    <string name="t_tulo_torneo">Título torneo</string>
    <string name="categor_as">Categorías:</string>
    <string name="inscripciones_hasta_el_dia">Inscripciones hasta el dia:</string>
    <string name="precio_inscripci_n">Precio inscripción:</string>
    <string name="genero">Género:</string>
    <string name="usuario">Usuario:</string>
    <string-array name="sort_types">
        <item name="0">Vuitens de final</item>
        <item name="1">Quarts de final</item>
        <item name ="2">Semifinals</item>
        <item name="3">Final</item>
    </string-array>


</resources>
