<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ProfilePublic">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="411dp"
        android:layout_height="153dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_users"
            android:layout_width="159dp"
            android:layout_height="33dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="104dp"
            android:text="@string/nombre_usuario"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="113dp"
            android:layout_height="74dp"
            android:contentDescription="@string/tourmasterlogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137"
            app:srcCompat="@mipmap/tournmaster" />

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="127dp"
            android:layout_height="93dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166"
            app:srcCompat="@mipmap/user" />

        <TextView
            android:id="@+id/text_sexo"
            android:layout_width="75dp"
            android:layout_height="26dp"
            android:layout_marginTop="88dp"
            android:text="@string/g_nero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_rol"
            android:layout_width="82dp"
            android:layout_height="23dp"
            android:text="@string/su_rol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menuBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/text_club"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginStart="72dp"
        android:text="@string/su_club"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/text_marchname"
        android:layout_width="96dp"
        android:layout_height="60dp"
        android:layout_marginStart="72dp"
        android:text="@string/compa_ero_favorito"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="72dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/text_timeplay"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="72dp"
        android:text="@string/tiempo_jugado2"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/text_position"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:text="@string/posici_n"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/text_prefsmash"
        android:layout_width="106dp"
        android:layout_height="47dp"
        android:layout_marginStart="72dp"
        android:text="@string/golpeo_preferido"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.827" />

    <TextView
        android:id="@+id/edit_marchname"
        android:layout_width="96dp"
        android:layout_height="60dp"
        android:layout_marginStart="196dp"
        android:text="@string/compa_ero_favorito"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/edit_position"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="196dp"
        android:text="@string/posici_n"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/edit_email"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="196dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/edit_timeplay"
        android:layout_width="107dp"
        android:layout_height="45dp"
        android:layout_marginStart="196dp"
        android:text="@string/tiempo_jugado"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/edit_club"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginStart="196dp"
        android:text="@string/su_club"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/edit_prefsmash"
        android:layout_width="106dp"
        android:layout_height="47dp"
        android:layout_marginStart="196dp"
        android:text="@string/golpeo_preferido"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.827" />

    <TextView
        android:id="@+id/text_datos"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:text="Datos:"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nom"
        app:layout_constraintVertical_bias="0.046" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nom"
        app:layout_constraintVertical_bias="0.126">

        <TextView
            android:id="@+id/edit_nombre"
            android:layout_width="94dp"
            android:layout_height="40dp"
            android:layout_marginStart="196dp"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="94dp"
            android:layout_height="40dp"
            android:layout_marginStart="72dp"
            android:text="@string/nombre" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>